--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
       integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc="
       crossorigin="anonymous"
     />
-
-    <!-- Update these with your own fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
       rel="stylesheet"
@@ -133,7 +131,10 @@
       <div class="portfolio">
         <!-- Portfolio item 01 -->
 
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a
+          href="Portfolio_Items/Carrier_based/Carrier-based Rail System.html"
+          class="portfolio__item"
+        >
           <img src="img/portfolio-01.jpg" alt="" class="portfolio__img" />
           <div class="portfolio__item__text">test text</div>
         </a>
