updated with carrierbased, kepasa and tindong

--- a/Portfolio_Items/1-Carrier_based/Carrier-based Rail System.html
+++ b/Portfolio_Items/1-Carrier_based/Carrier-based Rail System.html
@@ -76,7 +76,7 @@
         enabling us to tell which scenarios the system excelled in,
         and which they struggled with.
       </p>
-      <img src="img/Simulation.gif" alt=""  class="center" />
+      <img src="asset/Simulation.gi" alt=""  class="center" />
 
 
       <h2 class="section__subtitle" >Introduction </h2>
