--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- Portfolio item 01 -->
 
         <a
-          href="Portfolio_Items/Carrier_based/Carrier-based Rail System.html"
+          href="Portfolio_Items/1-Carrier_based/Carrier-based Rail System.html"
           class="portfolio__item"
         >
           <img src="img/portfolio-01.jpg" alt="" class="portfolio__img" />
@@ -140,13 +140,16 @@
         </a>
 
         <!-- Portfolio item 02 -->
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a href="Portfolio_Items/2-Kepasa/Kepasa.html" class="portfolio__item">
           <img src="img/portfolio-02.jpg" alt="" class="portfolio__img" />
           <div class="portfolio__item__text">test text</div>
         </a>
 
         <!-- Portfolio item 03 -->
-        <a href="portfolio-item.html" class="portfolio__item">
+        <a
+          href="Portfolio_Items/3-TinDog-Start-master/index.html"
+          class="portfolio__item"
+        >
           <img src="img/portfolio-03.jpg" alt="" class="portfolio__img" />
           <div class="portfolio__item__text">test text</div>
         </a>
