--- a/Portfolio_Items/2-Kepasa/Kepasa.html
+++ b/Portfolio_Items/2-Kepasa/Kepasa.html
@@ -21,12 +21,12 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="../img/devMichael.png" alt="" />
+        <img src="../../img/devMichael.png" alt="" />
       </div>
       <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -54,7 +54,7 @@
         The title <strong>of my project</strong>
       </h1>
       <p class="section__subtitle section__subtitle--intro">A short subtitle</p>
-      <img src="../img/portfolio-01.jpg" alt="" class="intro__img" />
+      <img src="../../img/portfolio-01.jpg" alt="" class="intro__img" />
     </section>
 
     <div class="portfolio-item-individual">
@@ -63,7 +63,7 @@
         eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius
         earum?
       </p>
-      <img src="../img/portfolio-details.jpg" alt="" />
+      <img src="../../img/portfolio-details.jpg" alt="" />
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet
         tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?
